--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_settings">Settings</string>
     <string name="trending_news">Trending News</string>
     <string name="see_original_article"><![CDATA[See Original Article >>]]></string>
+    <string name="bookmark">Bookmark</string>
 </resources>
